@@ -1,3 +1,10 @@
+2007-09-04  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* itpp/base/math/elem_math.h: Added sign_i() and sgn_i() functions
+
+	These new functions calculates the sign of an integer or double
+	argument and return -1, 0 or 1 integer value.
+
 2007-08-30  Adam Piatyszek  <ediap@users.sourceforge.net>
 
 	* configure.ac, itpp/base/math/log_exp.h, itpp/base/specmat.cpp,
